--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Experience the finest coffee and delicious treats at Pit Stop Cafe in Copacabana. Modern ambiance, exceptional service, and unforgettable flavors.">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -77,6 +77,10 @@
                             <i class="fas fa-leaf"></i>
                             <span>Sustainable Sourcing</span>
                         </div>
+                        <div class="feature">
+                            <i class="fas fa-users"></i>
+                            <span>Community Focused</span>
+                        </div>
                     </div>
                 </div>
                 <div class="about-image">
@@ -101,24 +105,40 @@
                 <div class="tab-content active" id="coffee">
                     <div class="menu-grid">
                         <div class="menu-item">
-                            <h3>Signature Espresso</h3>
-                            <p>Rich, bold espresso with notes of chocolate and caramel</p>
-                            <span class="price">$3.50</span>
+                            <h3>Irish Coffee with Johnnie Walker Red</h3>
+                            <p>Premium Irish coffee made with Johnnie Walker Red whiskey</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Cappuccino Supreme</h3>
-                            <p>Perfectly balanced cappuccino with velvety microfoam</p>
-                            <span class="price">$4.25</span>
+                            <h3>Irish Coffee with Jameson</h3>
+                            <p>Classic Irish coffee crafted with authentic Jameson whiskey</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Copacabana Blend</h3>
-                            <p>Our signature house blend inspired by local flavors</p>
-                            <span class="price">$4.75</span>
+                            <h3>Coffee with Bailey's</h3>
+                            <p>Rich coffee enhanced with smooth Bailey's Irish cream</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Cold Brew Delight</h3>
-                            <p>Smooth, refreshing cold brew perfect for warm days</p>
-                            <span class="price">$4.00</span>
+                            <h3>Hot Chocolate with Amaretto</h3>
+                            <p>Creamy hot chocolate infused with aromatic Amaretto liqueur</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Hot Coffee with Cinnamon</h3>
+                            <p>Freshly brewed coffee with a warming touch of cinnamon</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Latte</h3>
+                            <p>Smooth and creamy espresso with steamed milk and velvety foam</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Coffee with Cinnamon, Cloves, Ginger & Aniseed</h3>
+                            <p>Aromatic spiced coffee blend with warming cinnamon, cloves, ginger and aniseed</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Cappuccino</h3>
+                            <p>Classic Italian coffee with equal parts espresso, steamed milk, and foam</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Americano</h3>
+                            <p>Rich espresso diluted with hot water for a smooth, bold flavor</p>
                         </div>
                     </div>
                 </div>
@@ -126,24 +146,40 @@
                 <div class="tab-content" id="food">
                     <div class="menu-grid">
                         <div class="menu-item">
-                            <h3>Artisan Croissant</h3>
-                            <p>Buttery, flaky croissant baked fresh daily</p>
-                            <span class="price">$3.25</span>
+                            <h3>Tarwi, Fruit, Brazil Nuts & Chia</h3>
+                            <p>Nutritious blend of local tarwi beans, fresh fruit, Brazil nuts and chia seeds</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Oats, Banana, Chocolate & Milk</h3>
+                            <p>Hearty oatmeal topped with fresh banana, chocolate and creamy milk</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Pineapple & Coconut</h3>
+                            <p>Tropical refreshing combination of sweet pineapple and coconut</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Peanut Butter, Chocolate & Vegetable Milk</h3>
+                            <p>Protein-rich blend with creamy peanut butter, chocolate and plant-based milk</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Peanuts, Chia & Apple with Vegetable Milk</h3>
+                            <p>Healthy mix of peanuts, chia seeds, fresh apple with vegetable milk</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Yogurt & Fruit</h3>
+                            <p>Creamy yogurt paired with seasonal fresh fruits</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Granola Bowl</h3>
+                            <p>Crunchy granola with nuts, seeds, and dried fruits</p>
                         </div>
                         <div class="menu-item">
                             <h3>Avocado Toast</h3>
-                            <p>Multigrain bread topped with fresh avocado and herbs</p>
-                            <span class="price">$7.50</span>
+                            <p>Fresh avocado on toasted bread with herbs and seasoning</p>
                         </div>
                         <div class="menu-item">
                             <h3>Breakfast Sandwich</h3>
-                            <p>Freshly baked bread with eggs, cheese, and your choice of protein</p>
-                            <span class="price">$8.25</span>
-                        </div>
-                        <div class="menu-item">
-                            <h3>Quinoa Bowl</h3>
-                            <p>Nutritious quinoa with fresh vegetables and house dressing</p>
-                            <span class="price">$9.75</span>
+                            <p>Freshly baked bread with eggs, cheese, and choice of protein</p>
                         </div>
                     </div>
                 </div>
@@ -151,24 +187,40 @@
                 <div class="tab-content" id="desserts">
                     <div class="menu-grid">
                         <div class="menu-item">
-                            <h3>Chocolate Brownie</h3>
-                            <p>Decadent chocolate brownie with walnuts</p>
-                            <span class="price">$4.50</span>
+                            <h3>Nutella & Brownie Plate</h3>
+                            <p>Indulgent combination of rich Nutella spread and freshly baked brownie</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Cheesecake Slice</h3>
-                            <p>Creamy New York style cheesecake</p>
-                            <span class="price">$5.25</span>
+                            <h3>Chocolate Brownie</h3>
+                            <p>Rich, fudgy chocolate brownie made fresh daily</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Chocolate Cake</h3>
+                            <p>Decadent chocolate cake with rich cocoa flavor</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Cheesecake</h3>
+                            <p>Creamy, smooth cheesecake with graham cracker crust</p>
                         </div>
                         <div class="menu-item">
                             <h3>Tiramisu</h3>
-                            <p>Classic Italian dessert with coffee-soaked ladyfingers</p>
-                            <span class="price">$5.75</span>
+                            <p>Classic Italian dessert with coffee-soaked ladyfingers and mascarpone</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Seasonal Fruit Tart</h3>
-                            <p>Fresh seasonal fruits on vanilla custard base</p>
-                            <span class="price">$4.75</span>
+                            <h3>Fruit Tart</h3>
+                            <p>Buttery pastry filled with custard and topped with fresh seasonal fruits</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Chocolate Mousse</h3>
+                            <p>Light and airy chocolate mousse with whipped cream</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Apple Pie</h3>
+                            <p>Traditional apple pie with cinnamon and flaky pastry crust</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Ice Cream Selection</h3>
+                            <p>Variety of premium ice cream flavors served in cups or cones</p>
                         </div>
                     </div>
                 </div>
@@ -176,24 +228,40 @@
                 <div class="tab-content" id="beverages">
                     <div class="menu-grid">
                         <div class="menu-item">
-                            <h3>Fresh Orange Juice</h3>
-                            <p>Freshly squeezed orange juice</p>
-                            <span class="price">$3.75</span>
+                            <h3>Natural Juices with Water or Milk</h3>
+                            <p>Fresh fruit juices made to order, served with water or milk base</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Iced Tea</h3>
-                            <p>Refreshing iced tea with lemon</p>
-                            <span class="price">$2.75</span>
+                            <h3>Orange Juice</h3>
+                            <p>Freshly squeezed orange juice, pure and refreshing</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Smoothie Bowl</h3>
-                            <p>Blended fruits topped with granola and berries</p>
-                            <span class="price">$6.50</span>
+                            <h3>Sparkling Water, Lemon & Mint</h3>
+                            <p>Refreshing sparkling water infused with fresh lemon and mint</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Hot Chocolate</h3>
-                            <p>Rich, creamy hot chocolate with marshmallows</p>
-                            <span class="price">$3.95</span>
+                            <h3>Coca Cola, Fanta, Sprite</h3>
+                            <p>Classic soft drinks available in various sizes</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Bottled Water</h3>
+                            <p>Pure bottled water with or without gas</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Paceña Beer</h3>
+                            <p>Local Bolivian beer, perfectly chilled and refreshing</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Huari Beer</h3>
+                            <p>Traditional Bolivian beer with authentic local flavor</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Wine Selection</h3>
+                            <p>Red and white wines available by the glass or bottle</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Singani Casa Real Black</h3>
+                            <p>Premium Bolivian singani, a traditional grape brandy</p>
                         </div>
                     </div>
                 </div>
@@ -259,21 +327,26 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/cafe.pitstop.copa.bolivia/?hl=en" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.tripadvisor.com/Restaurant_Review-g297316-d7772604-Reviews-Pit_Stop-Copacabana_La_Paz_Department.html" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fab fa-tripadvisor"></i></a>
+                        <a href="https://www.tripadvisor.com/Restaurant_Review-g297316-d7772604-Reviews-Pit_Stop-Copacabana_La_Paz_Department.html" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fas fa-map-marked-alt"></i></a>
                     </div>
                 </div>
-                <div class="contact-map">
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241.89847845935458!2d-69.08825532923508!3d-16.16574504999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915dd27daad92195%3A0xc5faff4056b99c16!2sPit%20Stop!5e0!3m2!1sen!2sus!4v1642000000000!5m2!1sen!2sus"
-                        width="100%" 
-                        height="300" 
-                        style="border:0; border-radius: 8px;" 
-                        allowfullscreen="" 
-                        loading="lazy" 
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+                <div class="contact-map-section">
+                    <div class="contact-map">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241.89847845935458!2d-69.08825532923508!3d-16.16574504999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915dd27daad92195%3A0xc5faff4056b99c16!2sPit%20Stop!5e0!3m2!1sen!2sus!4v1642000000000!5m2!1sen!2sus"
+                            width="100%" 
+                            height="300" 
+                            style="border:0; border-radius: 8px;" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+                    <div class="bakery-image">
+                        <img src="assets/Bakery Goods.jpg" alt="Fresh Bakery Goods at Pit Stop Cafe" class="bakery-img">
+                    </div>
                 </div>
             </div>
         </div>
