Enhance contact section and update about section
- Updated 'Our Story' section to emphasize bakery specialties
  * Highlighted empanadas, fresh-baked bread, pies, and desserts as main focus
  * Positioned coffee as complementary offering rather than primary focus
  * Added details about authentic Bolivian empanadas and artisanal baking

- Redesigned contact section layout and styling
  * Fixed column height balance issues for better visual alignment
  * Repositioned map to align with contact information cards
  * Added sister location link for 'Catch Your Breath Coffee Bar' in La Paz
  * Implemented clean, elegant cursive text styling for sister location
  * Enhanced responsive design for mobile compatibility

- Improved visual hierarchy and user experience
  * Consistent color scheme using brand browns and gold accents
  * Better spacing and typography throughout contact section
  * Smooth hover effects and interactive elements
  * Mobile-responsive layout adjustments

- Added project documentation (Revisions.md) for tracking changes

--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
                     <h2 class="section-title">Our Story</h2>
                     <p class="about-text">
                         Nestled in the vibrant heart of Copacabana, Pit Stop Cafe is more than just a coffee shop – 
-                        it's a sanctuary where passion meets perfection. Since our opening, we've been dedicated to 
-                        serving exceptional coffee, crafted with love and precision.
+                        it's a sanctuary where artisanal baking meets culinary passion. Since our opening, we've been dedicated to 
+                        crafting exceptional empanadas, fresh-baked bread, and irresistible pies and desserts, all made with love and precision.
                     </p>
                     <p class="about-text">
-                        Our expert baristas source the finest beans from around the world, creating unique blends 
-                        that capture the essence of coffee culture. Whether you're looking for a quick energizing 
-                        break or a peaceful moment to unwind, Pit Stop Cafe is your perfect destination.
+                        Our skilled bakers work daily to create authentic Bolivian empanadas with traditional and innovative fillings, 
+                        while our fresh-baked bread serves as the foundation for our delicious sandwiches. From decadent desserts to savory pies, 
+                        every item is handcrafted using the finest local ingredients. Whether you're craving a hearty empanada, a slice of homemade pie, 
+                        or a perfectly brewed coffee to complement your treat, Pit Stop Cafe is your perfect destination.
                     </p>
                     <div class="about-features">
                         <div class="feature">
@@ -146,40 +147,40 @@
                 <div class="tab-content" id="food">
                     <div class="menu-grid">
                         <div class="menu-item">
-                            <h3>Tarwi, Fruit, Brazil Nuts & Chia</h3>
-                            <p>Nutritious blend of local tarwi beans, fresh fruit, Brazil nuts and chia seeds</p>
+                            <h3>BLT Sandwich</h3>
+                            <p>Classic BLT with bacon, lettuce, and tomato on freshly baked homemade bread</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Oats, Banana, Chocolate & Milk</h3>
-                            <p>Hearty oatmeal topped with fresh banana, chocolate and creamy milk</p>
+                            <h3>Pickled Aubergine & Sun Dried Tomatoes (Vegan)</h3>
+                            <p>Delicious vegan sandwich with pickled aubergine and sun dried tomatoes on homemade bread</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Pineapple & Coconut</h3>
-                            <p>Tropical refreshing combination of sweet pineapple and coconut</p>
+                            <h3>Avocado, Tomato, Onion & Cilantro Sandwich</h3>
+                            <p>Fresh and healthy sandwich with avocado, tomato, onion and cilantro on homemade bread</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Peanut Butter, Chocolate & Vegetable Milk</h3>
-                            <p>Protein-rich blend with creamy peanut butter, chocolate and plant-based milk</p>
+                            <h3>Empanadas - Chicken</h3>
+                            <p>Traditional pastry filled with seasoned chicken and vegetables</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Peanuts, Chia & Apple with Vegetable Milk</h3>
-                            <p>Healthy mix of peanuts, chia seeds, fresh apple with vegetable milk</p>
+                            <h3>Empanadas - Ham & Cheese</h3>
+                            <p>Crispy pastry with savory ham and melted cheese filling</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Yogurt & Fruit</h3>
-                            <p>Creamy yogurt paired with seasonal fresh fruits</p>
+                            <h3>Empanadas - Beef</h3>
+                            <p>Hearty beef empanada with traditional Bolivian spices</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Granola Bowl</h3>
-                            <p>Crunchy granola with nuts, seeds, and dried fruits</p>
+                            <h3>Empanadas - Trout</h3>
+                            <p>Local Lake Titicaca trout empanada with fresh herbs</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Avocado Toast</h3>
-                            <p>Fresh avocado on toasted bread with herbs and seasoning</p>
+                            <h3>Empanadas - Vegan Curry</h3>
+                            <p>Plant-based empanada filled with aromatic curry vegetables and spices</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Breakfast Sandwich</h3>
-                            <p>Freshly baked bread with eggs, cheese, and choice of protein</p>
+                            <h3>Eggs with Avocado & Tomato on Toast</h3>
+                            <p>Fresh eggs served with creamy avocado and ripe tomato on toasted homemade bread</p>
                         </div>
                     </div>
                 </div>
@@ -203,24 +204,24 @@
                             <p>Creamy, smooth cheesecake with graham cracker crust</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Tiramisu</h3>
-                            <p>Classic Italian dessert with coffee-soaked ladyfingers and mascarpone</p>
+                            <h3>Lemon Meringue Pie</h3>
+                            <p>Tangy lemon filling topped with fluffy meringue in buttery pastry</p>
                         </div>
                         <div class="menu-item">
                             <h3>Fruit Tart</h3>
                             <p>Buttery pastry filled with custard and topped with fresh seasonal fruits</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Chocolate Mousse</h3>
-                            <p>Light and airy chocolate mousse with whipped cream</p>
+                            <h3>Fruits of the Forest Crumble</h3>
+                            <p>Mixed berry crumble with a golden oat topping, served warm</p>
                         </div>
                         <div class="menu-item">
                             <h3>Apple Pie</h3>
                             <p>Traditional apple pie with cinnamon and flaky pastry crust</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Ice Cream Selection</h3>
-                            <p>Variety of premium ice cream flavors served in cups or cones</p>
+                            <h3>Vegan Banana and Chocolate Squares</h3>
+                            <p>Plant-based treats with ripe banana and rich chocolate, dairy-free</p>
                         </div>
                     </div>
                 </div>
@@ -240,16 +241,20 @@
                             <p>Refreshing sparkling water infused with fresh lemon and mint</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Coca Cola, Fanta, Sprite</h3>
-                            <p>Classic soft drinks available in various sizes</p>
+                            <h3>Tarwi, Fruit, Brazil Nuts & Chia</h3>
+                            <p>Nutritious blend of local tarwi beans, fresh fruit, Brazil nuts and chia seeds</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Bottled Water</h3>
-                            <p>Pure bottled water with or without gas</p>
+                            <h3>Oats, Banana, Chocolate & Milk</h3>
+                            <p>Hearty oatmeal topped with fresh banana, chocolate and creamy milk</p>
                         </div>
                         <div class="menu-item">
-                            <h3>Paceña Beer</h3>
-                            <p>Local Bolivian beer, perfectly chilled and refreshing</p>
+                            <h3>Peanut Butter, Chocolate & Vegetable Milk</h3>
+                            <p>Protein-rich blend with creamy peanut butter, chocolate and plant-based milk</p>
+                        </div>
+                        <div class="menu-item">
+                            <h3>Peanuts, Chia & Apple with Vegetable Milk</h3>
+                            <p>Healthy mix of peanuts, chia seeds, fresh apple with vegetable milk</p>
                         </div>
                         <div class="menu-item">
                             <h3>Huari Beer</h3>
@@ -258,10 +263,6 @@
                         <div class="menu-item">
                             <h3>Wine Selection</h3>
                             <p>Red and white wines available by the glass or bottle</p>
-                        </div>
-                        <div class="menu-item">
-                            <h3>Singani Casa Real Black</h3>
-                            <p>Premium Bolivian singani, a traditional grape brandy</p>
                         </div>
                     </div>
                 </div>
@@ -313,8 +314,7 @@
                         <i class="fas fa-clock"></i>
                         <div>
                             <h3>Hours</h3>
-                            <p>Monday - Tuesday: 8:00 AM - 8:00 PM<br>
-                               Wednesday - Sunday: 8:00 AM - 8:00 PM<br>
+                            <p>Monday - Sunday: 9:00 AM - 10:00 PM<br>
                                <small style="color: var(--text-light); font-style: italic;">Hours might differ</small></p>
                         </div>
                     </div>
@@ -322,12 +322,11 @@
                         <i class="fas fa-phone"></i>
                         <div>
                             <h3>Contact</h3>
-                            <p>Phone: +591 XXX XXXX<br>
+                            <p>Phone: +591 63235727<br>
                                Email: info@pitstop-cafe.com</p>
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/cafe.pitstop.copa.bolivia/?hl=en" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.tripadvisor.com/Restaurant_Review-g297316-d7772604-Reviews-Pit_Stop-Copacabana_La_Paz_Department.html" target="_blank" rel="noopener noreferrer" class="social-link"><i class="fas fa-map-marked-alt"></i></a>
                     </div>
@@ -335,17 +334,21 @@
                 <div class="contact-map-section">
                     <div class="contact-map">
                         <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241.89847845935458!2d-69.08825532923508!3d-16.16574504999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915dd27daad92195%3A0xc5faff4056b99c16!2sPit%20Stop!5e0!3m2!1sen!2sus!4v1642000000000!5m2!1sen!2sus"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241.89847845935458!2d-69.08825532923508!3d-16.16574504999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915dd27daad92195%3A0xc5faff4056b99c16!2ePit%20Stop!5e0!3m2!1sen!2sus!4v1642000000000!5m2!1sen!2sus"
                             width="100%" 
-                            height="300" 
+                            height="250" 
                             style="border:0; border-radius: 8px;" 
                             allowfullscreen="" 
                             loading="lazy" 
                             referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </div>
-                    <div class="bakery-image">
-                        <img src="assets/Bakery Goods.jpg" alt="Fresh Bakery Goods at Pit Stop Cafe" class="bakery-img">
+                    <div class="sister-location-text">
+                        <a href="https://share.google/eYtkvhonPJ3KQNfkk" target="_blank" rel="noopener noreferrer" class="sister-location-link">
+                            <div class="sister-location-line">Visit our sister location,</div>
+                            <div class="sister-location-line">Catch Your Breath Coffee Bar</div>
+                            <div class="sister-location-line">in La Paz!</div>
+                        </a>
                     </div>
                 </div>
             </div>
