Add Nomadic Web Studio credit link to footer
- Added 'Made with ❤️ by Nomadic Web Studio' text with link to footer
- Link opens to https://nomadicwebstudio.netlify.app in new tab
- Styled with gold accent color matching existing theme
- Added hover effects and smooth transitions

--- a/index.html
+++ b/index.html
@@ -364,6 +364,9 @@
                     <span>Pit Stop Cafe</span>
                 </div>
                 <p>&copy; 2025 Pit Stop Cafe. All rights reserved. Made with ❤️ in Copacabana</p>
+                <p class="nomadic-credit">
+                    Made with ❤️ by <a href="https://nomadicwebstudio.netlify.app" target="_blank" rel="noopener noreferrer" class="nomadic-link">Nomadic Web Studio</a>
+                </p>
             </div>
         </div>
     </footer>
